Add async api for battery record creation
